--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ chardet==3.0.4
 Click==7.0
 Flask==1.0.2
 Flask-Cors==3.0.7
-gunicorn==19.9.0
 idna==2.7
 itsdangerous==1.1.0
 Jinja2==2.10
@@ -13,5 +12,7 @@ lxml==4.2.5
 MarkupSafe==1.1.0
 requests==2.20.1
 six==1.11.0
+urljoin==1.0.0
 urllib3==1.24.1
+virtualenv==16.1.0
 Werkzeug==0.14.1
